; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_fsctl.c_trim_whole_device.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_fsctl.c_trim_whole_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i32, i32, i64, i64, i64, i64, i32 }

@DeviceDsmAction_Trim = common dso_local global i32 0, align 4
@DEVICE_DSM_FLAG_ENTIRE_DATA_SET_RANGE = common dso_local global i32 0, align 4
@DEVICE_DSM_FLAG_TRIM_NOT_FS_ALLOCATED = common dso_local global i32 0, align 4
@IOCTL_STORAGE_MANAGE_DATA_SET_ATTRIBUTES = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [56 x i8] c"IOCTL_STORAGE_MANAGE_DATA_SET_ATTRIBUTES returned %08x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @trim_whole_device(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.TYPE_6__, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 0
  store i32 48, i32* %5, align 8
  %6 = load i32, i32* @DeviceDsmAction_Trim, align 4
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 6
  store i32 %6, i32* %7, align 8
  %8 = load i32, i32* @DEVICE_DSM_FLAG_ENTIRE_DATA_SET_RANGE, align 4
  %9 = load i32, i32* @DEVICE_DSM_FLAG_TRIM_NOT_FS_ALLOCATED, align 4
  %10 = or i32 %8, %9
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 5
  store i64 0, i64* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 4
  store i64 0, i64* %13, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 3
  store i64 0, i64* %14, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %3, i32 0, i32 2
  store i64 0, i64* %15, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @IOCTL_STORAGE_MANAGE_DATA_SET_ATTRIBUTES, align 4
  %20 = call i32 @dev_ioctl(i32 %18, i32 %19, %struct.TYPE_6__* %3, i32 48, i32* null, i32 0, i32 1, i32* null)
  store i32 %20, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @NT_SUCCESS(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %27, label %24

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @WARN(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %24, %1
  ret void
}

declare dso_local i32 @dev_ioctl(i32, i32, %struct.TYPE_6__*, i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @NT_SUCCESS(i32) #1

declare dso_local i32 @WARN(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
